--- a/app/src/main/res/layout/activity_music_player.xml
+++ b/app/src/main/res/layout/activity_music_player.xml
@@ -43,14 +43,14 @@
             android:id="@+id/playButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="播放" />
+            android:onClick="onClick"
+            android:text="暂停" />
 
         <Button
-            android:id="@+id/pauseButton"
+            android:id="@+id/HartMusic"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="暂停"
-            android:enabled="false" />
+            android:text="收藏" />
 
         <Button
             android:id="@+id/nextButton"
@@ -59,13 +59,6 @@
             android:text="下一首" />
 
     </LinearLayout>
-
-    <Button
-        android:id="@+id/HartMusic"
-        android:layout_width="357dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="加入收藏" />
 
     <Button
         android:id="@+id/playModeButton"
