--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -15,14 +15,14 @@
 
     <Button
         android:id="@+id/searchButton"
-        android:layout_width="wrap_content"
+        android:layout_width="360dp"
         android:layout_height="wrap_content"
         android:text="Search" />
 
     <ListView
         android:id="@+id/musicListView"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_width="wrap_content"
+        android:layout_height="579dp"
         android:layout_weight="1"
         android:divider="@drawable/rounded_divider"
         android:dividerHeight="1dp" />
